syntax = "proto3";
package customer_grpc;

option go_package = "/customer/delivery/customer_grpc";
service CustomerHandler{
    rpc GetCustomer(Empty) returns (Customers);
    rpc InsertCustomer(Customer) returns (CustomerResponse);

}

message CustomerResponse{
    int64 id = 1;
    string message = 2;
}

message Empty {};

message Customers{
    string message = 1;
    repeated Customer Data = 2;
}

message Customer{
    int64 Id = 1 ;
    string Name = 2;
    string Address = 3;
    string Email = 4;
    string Phone = 5;
}